--- a/1-Day/Package.json
+++ b/1-Day/Package.json
@@ -1,1 +1,13 @@
 
+{
+  "name": "varables",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
+}
