--- a/5-Day/package.json
+++ b/5-Day/package.json
@@ -1,1 +1,12 @@
-
+{
+  "name": "100days-typescript",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
+}
