--- a/6-Day/Package.json
+++ b/6-Day/Package.json
@@ -1,1 +1,14 @@
 
+{
+  "name": "100days-typescript",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
+}
