--- a/2-Day/package.json
+++ b/2-Day/package.json
@@ -2,3 +2,12 @@
   "name": "100days-typescript",
   "version": "1.0.0",
   "description": "",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "Muhammad Salman",
+  "license": "ISC"
+}
